1 chart for minikube and 1 chart for terraform

--- a/2Minikube/apple-basket/templates/app-deployment.yaml
+++ b/2Minikube/apple-basket/templates/app-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodejs-app
+  labels:
+    {{- include "apple-basket.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
