--- a/apple-basket/templates/config-map.yaml
+++ b/apple-basket/templates/config-map.yaml
@@ -2,9 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongodb-config
-  labels:
-    {{- include "apple-basket.labels" . | nindent 4 }}
 data:
-  MONGODB_SERVICE: {{ .Values.config.mongodb.service | quote }}
-  MONGODB_PORT: {{ .Values.config.mongodb.port | quote }}
-  MONGODB_DATABASE: {{ .Values.config.mongodb.database | quote }}
+  MONGODB_SERVICE: "{{ .Values.config.mongodb.service }}"
+  MONGODB_PORT: "{{ .Values.config.mongodb.port }}"
+  MONGODB_DATABASE: "{{ .Values.config.mongodb.database }}"
