--- a/2Minikube/apple-basket/templates/db-service.yaml
+++ b/2Minikube/apple-basket/templates/db-service.yaml
@@ -2,12 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
-  labels:
-    {{- include "apple-basket.mongodb.labels" . | nindent 4 }}
 spec:
   selector:
     app: mongodb
   ports:
     - protocol: TCP
-      port: {{ .Values.mongodb.service.port }}
-      targetPort: {{ .Values.mongodb.service.port }}
+      port: {{ .Values.service.mongodb.port }}
+      targetPort: {{ .Values.service.mongodb.port }}
